PAN-37. Added OpenAPI standard, fixed bugs
